--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -4,6 +4,9 @@ $body-bg: #f8fafc;
 // Typography
 $font-family-sans-serif: "Inter", sans-serif;
 $font-size-base: 0.9rem;
+$font-weight-base: 500;
 $line-height-base: 1.6;
 
 $link-decoration: none;
+
+$primary: #304a6e;
