--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -1,5 +1,46 @@
 @import "bootstrap/scss/bootstrap";
 
+::-webkit-scrollbar {
+    width: 8px;
+    background: #eee;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #aaa;
+    border-radius: 10px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    display: none;
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+img,
+svg {
+    outline: none;
+}
+
+html,
+body,
+main,
+#app {
+    height: 100%;
+}
+
+.Login,
+.Login .container,
+.Login .row {
+    height: 100%;
+}
+
+.Register,
+.Register .container,
+.Register .row {
+    height: 100%;
+}
+
 img {
     width: 100%;
     height: auto;
@@ -95,6 +136,7 @@ img {
     margin-bottom: 12px;
     border-radius: 12px;
     background-color: #fff;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .Shop-card-name {
@@ -117,7 +159,7 @@ img {
     color: #000;
 }
 
-.Shop-card a{
+.Shop-card a {
     color: #000;
 }
 
@@ -125,4 +167,106 @@ img {
     padding: 18px 12px;
     margin-bottom: 12px;
     background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.menu-button {
+    padding: 0;
+    border: none;
+    background-color: transparent;
+}
+
+.Menu ul li {
+    font-weight: bold;
+    margin-bottom: 16px;
+}
+
+.Logo {
+    width: 227px;
+    height: 80px;
+    display: block;
+    margin: 0 auto;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+
+section.Register .card,
+section.Login .card {
+    min-width: 320px;
+    max-width: 380px;
+    margin: 0 auto;
+}
+
+.vh-90 {
+    height: 90vh;
+}
+
+.Profile-avatar {
+    width: 80px;
+    height: 80px;
+    margin: 0 auto;
+}
+
+.Profile-avatar img {
+    border-radius: 50%;
+}
+
+.Profile-top {
+    display: -webkit-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #fff;
+    border-radius: 20px;
+    height: auto;
+    min-height: 315px;
+    background-color: var(--bs-primary);
+}
+
+.Profile-name {
+    font-size: 20px;
+}
+
+.Profile-city {
+    color: #a7a7a7;
+    font-size: 14px;
+}
+
+.Profile-menu-block {
+    display: -webkit-box;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    width: 110px;
+    height: 74px;
+    padding: 8px;
+    margin: 0 auto;
+    border-radius: 10px;
+    background-color: #658dc0;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.Profile-top a {
+    color: #fff;
+}
+
+.Profile-menu-block-name {
+    font-size: 14px;
+    font-weight: 600;
+    margin-top: 8px;
+}
+
+.Profile-menu ul li {
+    font-size: 20px;
+    font-weight: 500;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 18px;
+}
+
+.Profile-menu ul li a {
+    color: #000;
 }
