--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,5 +1,6 @@
 // Body
-$body-bg: #f8fafc;
+$body-bg: #C8BAD3;
+;
 
 // Typography
 $font-family-sans-serif: "Inter", sans-serif;
@@ -9,4 +10,6 @@ $line-height-base: 1.6;
 
 $link-decoration: none;
 
-$primary: #304a6e;
+$primary: #7A87B8;
+
+$input-bg: #fff;
