--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -165,16 +165,14 @@ img {
 }
 
 .Product-card {
-    padding: 18px 12px;
     margin-bottom: 12px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
-.Product-card-img {
-    border-radius: 6px;
-    margin-bottom: 6px;
+.Product-card-content {
+    padding: 8px 12px;
 }
 
 .Product-card-img img {
@@ -194,7 +192,7 @@ img {
 
 .Logo {
     width: 227px;
-    height: 80px;
+    height: 56px;
     display: block;
     margin: 0 auto;
     background-repeat: no-repeat;
@@ -230,17 +228,17 @@ section.Login .card {
     justify-content: center;
     color: #fff;
     border-radius: 20px;
-    height: auto;
-    min-height: 315px;
-    background-color: var(--bs-primary);
+    padding: 20px 12px;
+    background-color: #fff;
 }
 
 .Profile-name {
+    color: #333;
     font-size: 20px;
 }
 
 .Profile-city {
-    color: #a7a7a7;
+    color: #6a6a6a;
     font-size: 14px;
 }
 
@@ -250,13 +248,13 @@ section.Login .card {
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    width: 110px;
+    width: 70px;
     height: 74px;
     padding: 8px;
     margin: 0 auto;
     border-radius: 10px;
-    background-color: #658dc0;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    background-color: #a697b8;
+    box-shadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.15);
 }
 
 .Profile-top a {
@@ -397,7 +395,6 @@ section.Login .card {
     right: 0;
 }
 
-
 .Qty-buttons .qty {
     color: #222;
     font-size: 16px;
@@ -524,4 +521,46 @@ section.Login .card {
     align-items: center;
     justify-content: space-between;
     margin-bottom: 8px;
+}
+
+.header {
+    background-color: #fff;
+}
+
+.navbar {
+    background-color: transparent !important;
+}
+
+.navbar-logo {
+    display: -webkit-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+main {
+    margin: 12px 0;
+}
+
+.Menu a {
+    color: #fff;
+}
+
+.Menu {
+    text-align: center;
+    margin-top: 42px;
+}
+
+.Cart-order {
+    padding: 18px 12px;
+    border-radius: 12px;
+    background-color: #fff;
+}
+
+.Checkout {
+    margin: 22px 0;
+}
+
+#cityModal .modal-content {
+    background-color: #fff;
 }
